--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" type="image/png" href="assets/lw_logo.png" />
+
     <title>React Portfolio Website</title>
     <style>
       * {
